--- a/styling a flex component/lesson 2 from job.html
+++ b/styling a flex component/lesson 2 from job.html
@@ -7,14 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="content2">
-        <div class="content2__element content2__element--blue">1</div>
-        <div class="content2__element content2__element--blue">0</div>
-    </div>
-    <div class="content2">
-        <div class="content2__element content2__element--green"></div>
-        <div class="content2__element content2__element--yellow"></div>
-        <div class="content2__element content2__element--green"></div>
+    <div class="wrapper">
+        <div class="content2">
+            <div class="content2__element content2__element--blue">
+                <div class="content2__date"></div>
+                <div class="content2__time"></div>
+                <div class="content2__title"></div>
+                <div class="content2__image"></div>
+                <div class="content2__link"></div>
+                <div class="content2__basket"></div>
+            </div>
+            <div class="content2__element content2__element--blue">0</div>
+        </div>
+        <div class="content2">
+            <div class="content2__element content2__element--green"></div>
+            <div class="content2__element content2__element--yellow"></div>
+            <div class="content2__element content2__element--green"></div>
+        </div>
     </div>
 </body>
 </html>
