--- a/styling a flex component/lesson 2 from job.html
+++ b/styling a flex component/lesson 2 from job.html
@@ -10,12 +10,16 @@
     <div class="wrapper">
         <div class="content2">
             <div class="content2__element content2__element--blue">
-                <div class="content2__date"></div>
-                <div class="content2__time"></div>
+                <div class="content2__top">
+                    <div class="content2__date"></div>
+                    <div class="content2__time"></div>
+                </div>
                 <div class="content2__title"></div>
                 <div class="content2__image"></div>
-                <div class="content2__link"></div>
-                <div class="content2__basket"></div>
+                <div class="content2__bottom">
+                    <div class="content2__link"></div>
+                    <div class="content2__basket"></div>
+                </div>
             </div>
             <div class="content2__element content2__element--blue">0</div>
         </div>
@@ -24,6 +28,19 @@
             <div class="content2__element content2__element--yellow"></div>
             <div class="content2__element content2__element--green"></div>
         </div>
+    </div>
+    <div class="content3">
+        <div class="content3__element"></div>
+        <div class="content3__element"></div>
+        <div class="content3__element"></div>
+        <div class="content3__element"></div>
+        <div class="content3__element"></div>
+        <div class="content3__element"></div>
+        <div class="content3__element"></div>
+    </div>
+    <div class="content4">
+        <div class="content4__title"></div>
+        <div class="content4__text"></div>
     </div>
 </body>
 </html>
