--- a/styling a flex component/lesson 2 from job.html
+++ b/styling a flex component/lesson 2 from job.html
@@ -42,5 +42,18 @@
         <div class="content4__title"></div>
         <div class="content4__text"></div>
     </div>
+    <div class="content5">
+        <div class="content5__element"></div>
+        <div class="content5__element--2"></div>
+    </div>
+    <div class="content6">
+        <div class="content6__element content6__element--first"></div>
+        <div class="content6__element"></div>
+        <div class="content6__element"></div>
+        <div class="content6__element"></div>
+        <div class="content6__element"></div>
+        <div class="content6__element"></div>
+        <div class="content6__element"></div>
+    </div>
 </body>
 </html>
