--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="page-content">
+        <h1 class="page-content__title">Интернет комнатных растений "Зелённый Пассажир"</h1>
+        <p class="page-content__text">Вместе с нами растёт жизнь</p>
+    </div>
 </body>
 </html>
