product-card__heading

--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -11,5 +11,12 @@
         <h1 class="page-content__title">Интернет комнатных растений "Зелённый Пассажир"</h1>
         <p class="page-content__text">Вместе с нами растёт жизнь</p>
     </div>
+    <div class="product-card">
+        <h2 class="product-card__title">Сциндапсус</h2>
+        <div class="product-card__heading">
+            <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228" alt="Сциндапсус">
+            <span class="product-card__name">Skindapsus</span>
+        </div>
+    </div>
 </body>
 </html>
