product-card__description

--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -16,6 +16,7 @@
         <div class="product-card__heading">
             <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228" alt="Сциндапсус">
             <span class="product-card__name">Skindapsus</span>
+            <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
         </div>
     </div>
 </body>
