--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -16,7 +16,19 @@
         <div class="product-card__heading">
             <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228" alt="Сциндапсус">
             <span class="product-card__name">Skindapsus</span>
-            <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
+        </div>
+        <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
+        <div class="product-card__info">
+            <div class="product-card__care">
+                <span class="product-card__care-condition">Полив:</span>
+                <span class="product-card__care-value">Умеренный</span>
+                <span class="product-card__care-condition">Солнце:</span>
+                <span class="product-card__care-value">Рассеянное</span>
+            </div>
+            <div class="product-card__links">
+                <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                <a class="product-card__link" href="">1200 руб.</a>
+            </div>
         </div>
     </div>
 </body>
