--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -20,10 +20,14 @@
         <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
         <div class="product-card__info">
             <div class="product-card__care">
-                <span class="product-card__care-condition">Полив:</span>
-                <span class="product-card__care-value">Умеренный</span>
-                <span class="product-card__care-condition">Солнце:</span>
-                <span class="product-card__care-value">Рассеянное</span>
+                <div class="product-card__care-group">
+                    <span class="product-card__care-condition">Полив:</span>
+                    <span class="product-card__care-value">Умеренный</span>
+                </div>
+                <div class="product-card__care-group">
+                    <span class="product-card__care-condition">Солнце:</span>
+                    <span class="product-card__care-value">Рассеянное</span>
+                </div> 
             </div>
             <div class="product-card__links">
                 <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
