product-card__care-group--right

--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -24,7 +24,7 @@
                     <span class="product-card__care-condition">Полив:</span>
                     <span class="product-card__care-value">Умеренный</span>
                 </div>
-                <div class="product-card__care-group">
+                <div class="product-card__care-group product-card__care-group--right">
                     <span class="product-card__care-condition">Солнце:</span>
                     <span class="product-card__care-value">Рассеянное</span>
                 </div> 
