--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -37,6 +37,136 @@
                     </div>
                 </div>
             </li>
+            <li class="products__item">
+                <div class="product-card">
+                    <h2 class="product-card__title">Лавр</h2>
+                    <div class="product-card__heading">
+                        <img class="product-card__img" src="img/lavr.jpg" height="152" width="228" alt="Лавр">
+                        <span class="product-card__name">Laurus</span>
+                    </div>
+                    <p class="product-card__description">Лавр обыкновенный (Laurus nobilis), также известный как лавровое дерево или лавровый куст, - это вечнозеленое растение, широко известное своими ароматными листьями, которые используются в кулинарии. Лавр произрастает в южных регионах Европы и Средиземноморья. Его листья имеют насыщенный аромат и используются для придания вкуса различным блюдам, таким как супы, соусы и маринады. Кроме того, лавровое дерево имеет декоративное значение и может вырастать в виде кустарника или небольшого дерева.</p>
+                    <div class="product-card__info">
+                        <div class="product-card__care">
+                            <div class="product-card__care-group">
+                                <span class="product-card__care-condition">Полив:</span>
+                                <span class="product-card__care-value">Умеренный</span>
+                            </div>
+                            <div class="product-card__care-group product-card__care-group--right">
+                                <span class="product-card__care-condition">Солнце:</span>
+                                <span class="product-card__care-value">Яркое</span>
+                            </div> 
+                        </div>
+                        <div class="product-card__links">
+                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                            <a class="product-card__link" href="">600 руб.</a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="products__item">
+                <div class="product-card">
+                    <h2 class="product-card__title">Бамбук</h2>
+                    <div class="product-card__heading">
+                        <img class="product-card__img" src="img/bambuk.jpg" height="152" width="228" alt="Бамбук">
+                        <span class="product-card__name">Bambusa</span>
+                    </div>
+                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <div class="product-card__info">
+                        <div class="product-card__care">
+                            <div class="product-card__care-group">
+                                <span class="product-card__care-condition">Полив:</span>
+                                <span class="product-card__care-value">Редко</span>
+                            </div>
+                            <div class="product-card__care-group product-card__care-group--right">
+                                <span class="product-card__care-condition">Солнце:</span>
+                                <span class="product-card__care-value">Яркое</span>
+                            </div> 
+                        </div>
+                        <div class="product-card__links">
+                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                            <a class="product-card__link" href="">1300 руб.</a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="products__item">
+                <div class="product-card">
+                    <h2 class="product-card__title">Драцена</h2>
+                    <div class="product-card__heading">
+                        <img class="product-card__img" src="img/dracaena.jpg" height="152" width="228" alt="Драцена">
+                        <span class="product-card__name">Bambusa</span>
+                    </div>
+                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <div class="product-card__info">
+                        <div class="product-card__care">
+                            <div class="product-card__care-group">
+                                <span class="product-card__care-condition">Полив:</span>
+                                <span class="product-card__care-value">Редко</span>
+                            </div>
+                            <div class="product-card__care-group product-card__care-group--right">
+                                <span class="product-card__care-condition">Солнце:</span>
+                                <span class="product-card__care-value">Яркое</span>
+                            </div> 
+                        </div>
+                        <div class="product-card__links">
+                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                            <a class="product-card__link" href="">1300 руб.</a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="products__item">
+                <div class="product-card">
+                    <h2 class="product-card__title">Бамбук</h2>
+                    <div class="product-card__heading">
+                        <img class="product-card__img" src="img/bambuk.jpg" height="152" width="228" alt="Сциндапсус">
+                        <span class="product-card__name">Bambusa</span>
+                    </div>
+                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <div class="product-card__info">
+                        <div class="product-card__care">
+                            <div class="product-card__care-group">
+                                <span class="product-card__care-condition">Полив:</span>
+                                <span class="product-card__care-value">Редко</span>
+                            </div>
+                            <div class="product-card__care-group product-card__care-group--right">
+                                <span class="product-card__care-condition">Солнце:</span>
+                                <span class="product-card__care-value">Яркое</span>
+                            </div> 
+                        </div>
+                        <div class="product-card__links">
+                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                            <a class="product-card__link" href="">1300 руб.</a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="products__item">
+                <div class="product-card">
+                    <h2 class="product-card__title">Бамбук</h2>
+                    <div class="product-card__heading">
+                        <img class="product-card__img" src="img/bambuk.jpg" height="152" width="228" alt="Сциндапсус">
+                        <span class="product-card__name">Bambusa</span>
+                    </div>
+                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <div class="product-card__info">
+                        <div class="product-card__care">
+                            <div class="product-card__care-group">
+                                <span class="product-card__care-condition">Полив:</span>
+                                <span class="product-card__care-value">Редко</span>
+                            </div>
+                            <div class="product-card__care-group product-card__care-group--right">
+                                <span class="product-card__care-condition">Солнце:</span>
+                                <span class="product-card__care-value">Яркое</span>
+                            </div> 
+                        </div>
+                        <div class="product-card__links">
+                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                            <a class="product-card__link" href="">1300 руб.</a>
+                        </div>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
 </body>
