--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -94,35 +94,35 @@
                     <h2 class="product-card__title">Драцена</h2>
                     <div class="product-card__heading">
                         <img class="product-card__img" src="img/dracaena.jpg" height="152" width="228" alt="Драцена">
-                        <span class="product-card__name">Bambusa</span>
+                        <span class="product-card__name">Dracaena</span>
                     </div>
-                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <p class="product-card__description">Драцена (Dracaena) — это род декоративных растений семейства спаржевых (Asparagaceae). Они обладают длинными, узкими листьями и прекрасным внешним видом, что делает их популярными как комнатные растения. Драцены могут иметь разнообразные окраски листьев, включая зеленые, красные, желтые и пурпурные оттенки, что добавляет разнообразия и красоты в интерьере. Они также считаются очень неприхотливыми и легкими в уходе, что делает их отличным выбором для начинающих садоводов.</p>
                     <div class="product-card__info">
                         <div class="product-card__care">
                             <div class="product-card__care-group">
                                 <span class="product-card__care-condition">Полив:</span>
-                                <span class="product-card__care-value">Редко</span>
+                                <span class="product-card__care-value">Обильный</span>
                             </div>
                             <div class="product-card__care-group product-card__care-group--right">
                                 <span class="product-card__care-condition">Солнце:</span>
-                                <span class="product-card__care-value">Яркое</span>
+                                <span class="product-card__care-value">Рассеянное</span>
                             </div> 
                         </div>
                         <div class="product-card__links">
                             <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
-                            <a class="product-card__link" href="">1300 руб.</a>
+                            <a class="product-card__link" href="">1500 руб.</a>
                         </div>
                     </div>
                 </div>
             </li>
             <li class="products__item">
                 <div class="product-card">
-                    <h2 class="product-card__title">Бамбук</h2>
+                    <h2 class="product-card__title">Пальма</h2>
                     <div class="product-card__heading">
-                        <img class="product-card__img" src="img/bambuk.jpg" height="152" width="228" alt="Сциндапсус">
-                        <span class="product-card__name">Bambusa</span>
+                        <img class="product-card__img" src="img/palma.jpg" height="152" width="228" alt="Пальма">
+                        <span class="product-card__name">Palma</span>
                     </div>
-                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <p class="product-card__description">Пальма небольшая в горшке - это миниатюрное растение из семейства пальмовых (Arecaceae). Она обладает красивой перистой листвой и компактным стволом, что делает ее отличным декоративным элементом для интерьеров. Эта мини-пальма легко ухаживать и подходит для украшения небольших помещений.</p>
                     <div class="product-card__info">
                         <div class="product-card__care">
                             <div class="product-card__care-group">
@@ -131,38 +131,38 @@
                             </div>
                             <div class="product-card__care-group product-card__care-group--right">
                                 <span class="product-card__care-condition">Солнце:</span>
-                                <span class="product-card__care-value">Яркое</span>
+                                <span class="product-card__care-value">Рассеянное</span>
                             </div> 
                         </div>
                         <div class="product-card__links">
                             <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
-                            <a class="product-card__link" href="">1300 руб.</a>
+                            <a class="product-card__link" href="">2300 руб.</a>
                         </div>
                     </div>
                 </div>
             </li>
             <li class="products__item">
                 <div class="product-card">
-                    <h2 class="product-card__title">Бамбук</h2>
+                    <h2 class="product-card__title">Крестовник</h2>
                     <div class="product-card__heading">
-                        <img class="product-card__img" src="img/bambuk.jpg" height="152" width="228" alt="Сциндапсус">
-                        <span class="product-card__name">Bambusa</span>
+                        <img class="product-card__img" src="img/spathiph.jpg" height="152" width="228" alt="Крестовник">
+                        <span class="product-card__name">Senecio</span>
                     </div>
-                    <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                    <p class="product-card__description">Растение семейства астровых Senecio, известное как крестовник, представляет собой удивительно красивое и разнообразное семейство растений. Крестовики могут быть как многолетними, так и однолетними, их родина - Африка, но некоторые виды встречаются и в других регионах мира. Характерной особенностью крестовика являются его декоративные сочные листья и красивые соцветия.</p>
                     <div class="product-card__info">
                         <div class="product-card__care">
                             <div class="product-card__care-group">
                                 <span class="product-card__care-condition">Полив:</span>
-                                <span class="product-card__care-value">Редко</span>
+                                <span class="product-card__care-value">Обильный</span>
                             </div>
                             <div class="product-card__care-group product-card__care-group--right">
                                 <span class="product-card__care-condition">Солнце:</span>
-                                <span class="product-card__care-value">Яркое</span>
+                                <span class="product-card__care-value">Тень</span>
                             </div> 
                         </div>
                         <div class="product-card__links">
                             <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
-                            <a class="product-card__link" href="">1300 руб.</a>
+                            <a class="product-card__link" href="">1200 руб.</a>
                         </div>
                     </div>
                 </div>
