--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -14,22 +14,26 @@
             <li class="products__item">
                 <div class="product-card">
                     <h2 class="product-card__title">Сциндапсус</h2>
-                    <div class="product-card__heading">
-                        <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228" alt="Сциндапсус">
-                        <span class="product-card__name">Skindapsus</span>
-                    </div>
-                    <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
-                    <div class="product-card__info">
-                        <div class="product-card__care">
-                            <div class="product-card__care-group">
-                                <span class="product-card__care-condition">Полив:</span>
-                                <span class="product-card__care-value">Умеренный</span>
-                            </div>
-                            <div class="product-card__care-group product-card__care-group--right">
-                                <span class="product-card__care-condition">Солнце:</span>
-                                <span class="product-card__care-value">Рассеянное</span>
-                            </div> 
+                    <div class="product-card__wrapper">
+                        <div class="product-card__heading">
+                            <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228" alt="Сциндапсус">
+                            <span class="product-card__name">Skindapsus</span>
                         </div>
+                        <div class="product-card__info-wrapper">
+                            <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
+                            <div class="product-card__info">
+                                <div class="product-card__care">
+                                    <div class="product-card__care-group">
+                                        <span class="product-card__care-condition">Полив:</span>
+                                        <span class="product-card__care-value">Умеренный</span>
+                                    </div>
+                                    <div class="product-card__care-group product-card__care-group--right">
+                                        <span class="product-card__care-condition">Солнце:</span>
+                                        <span class="product-card__care-value">Рассеянное</span>
+                                    </div> 
+                            </div> 
+                        </div>                               
+                    </div>
                         <div class="product-card__links">
                             <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
                             <a class="product-card__link" href="">1200 руб.</a>
