--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -31,39 +31,43 @@
                                         <span class="product-card__care-condition">Солнце:</span>
                                         <span class="product-card__care-value">Рассеянное</span>
                                     </div> 
-                            </div> 
-                        </div>                               
-                    </div>
-                        <div class="product-card__links">
-                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
-                            <a class="product-card__link" href="">1200 руб.</a>
-                        </div>
+                                    </div> 
+                                </div>                               
+                            </div>
+                            <div class="product-card__links">
+                                <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                                <a class="product-card__link" href="">1200 руб.</a>
+                            </div>
                     </div>
                 </div>
             </li>
             <li class="products__item">
                 <div class="product-card">
                     <h2 class="product-card__title">Лавр</h2>
-                    <div class="product-card__heading">
-                        <img class="product-card__img" src="img/lavr.jpg" height="152" width="228" alt="Лавр">
-                        <span class="product-card__name">Laurus</span>
+                    <div class="product-card__wrapper">
+                        <div class="product-card__heading">
+                            <img class="product-card__img" src="img/lavr.jpg" height="152" width="228" alt="Лавр">
+                            <span class="product-card__name">Laurus</span>
+                        </div>
+                        <div class="product-card__info-wrapper">
+                            <p class="product-card__description">Лавр обыкновенный (Laurus nobilis), также известный как лавровое дерево или лавровый куст, - это вечнозеленое растение, широко известное своими ароматными листьями, которые используются в кулинарии. Лавр произрастает в южных регионах Европы и Средиземноморья. Его листья имеют насыщенный аромат и используются для придания вкуса различным блюдам, таким как супы, соусы и маринады. Кроме того, лавровое дерево имеет декоративное значение и может вырастать в виде кустарника или небольшого дерева.</p>
+                            <div class="product-card__info">
+                                <div class="product-card__care">
+                                    <div class="product-card__care-group">
+                                        <span class="product-card__care-condition">Полив:</span>
+                                        <span class="product-card__care-value">Умеренный</span>
+                                    </div>
+                                    <div class="product-card__care-group product-card__care-group--right">
+                                        <span class="product-card__care-condition">Солнце:</span>
+                                        <span class="product-card__care-value">Яркое</span>
+                                    </div>
+                                </div>
+                                <div class="product-card__links">
+                                    <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                                    <a class="product-card__link" href="">600 руб.</a>
+                                </div>
+                        </div>
                     </div>
-                    <p class="product-card__description">Лавр обыкновенный (Laurus nobilis), также известный как лавровое дерево или лавровый куст, - это вечнозеленое растение, широко известное своими ароматными листьями, которые используются в кулинарии. Лавр произрастает в южных регионах Европы и Средиземноморья. Его листья имеют насыщенный аромат и используются для придания вкуса различным блюдам, таким как супы, соусы и маринады. Кроме того, лавровое дерево имеет декоративное значение и может вырастать в виде кустарника или небольшого дерева.</p>
-                    <div class="product-card__info">
-                        <div class="product-card__care">
-                            <div class="product-card__care-group">
-                                <span class="product-card__care-condition">Полив:</span>
-                                <span class="product-card__care-value">Умеренный</span>
-                            </div>
-                            <div class="product-card__care-group product-card__care-group--right">
-                                <span class="product-card__care-condition">Солнце:</span>
-                                <span class="product-card__care-value">Яркое</span>
-                            </div> 
-                        </div>
-                        <div class="product-card__links">
-                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
-                            <a class="product-card__link" href="">600 руб.</a>
-                        </div>
                     </div>
                 </div>
             </li>
