--- a/styling a flex component/styling a flex component practice/styling a flex component practice.html
+++ b/styling a flex component/styling a flex component practice/styling a flex component practice.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>styling a flex component practice</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="page-content">
         <h1 class="page-content__title">Интернет комнатных растений "Зелённый Пассажир"</h1>
@@ -16,11 +18,15 @@
                     <h2 class="product-card__title">Сциндапсус</h2>
                     <div class="product-card__wrapper">
                         <div class="product-card__heading">
-                            <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228" alt="Сциндапсус">
+                            <img class="product-card__img" src="img/skindapsus.jpg" height="152" width="228"
+                                alt="Сциндапсус">
                             <span class="product-card__name">Skindapsus</span>
                         </div>
                         <div class="product-card__info-wrapper">
-                            <p class="product-card__description">Сциндапсус - это экзотическое растение с привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может варьироваться от ярко-зеленой до более необычных оттенков.</p>
+                            <p class="product-card__description">Сциндапсус - это экзотическое растение с
+                                привлекательными листьями и уникальным внешним видом. Его листья обычно круглые и
+                                мясистые, а также часто имеют интересные узоры и цветовую гамму, которая может
+                                варьироваться от ярко-зеленой до более необычных оттенков.</p>
                             <div class="product-card__info">
                                 <div class="product-card__care">
                                     <div class="product-card__care-group">
@@ -30,14 +36,14 @@
                                     <div class="product-card__care-group product-card__care-group--right">
                                         <span class="product-card__care-condition">Солнце:</span>
                                         <span class="product-card__care-value">Рассеянное</span>
-                                    </div> 
-                                    </div> 
-                                </div>                               
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-card__links">
-                                <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
-                                <a class="product-card__link" href="">1200 руб.</a>
-                            </div>
+                        </div>
+                        <div class="product-card__links">
+                            <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
+                            <a class="product-card__link" href="">1200 руб.</a>
+                        </div>
                     </div>
                 </div>
             </li>
@@ -50,7 +56,13 @@
                             <span class="product-card__name">Laurus</span>
                         </div>
                         <div class="product-card__info-wrapper">
-                            <p class="product-card__description">Лавр обыкновенный (Laurus nobilis), также известный как лавровое дерево или лавровый куст, - это вечнозеленое растение, широко известное своими ароматными листьями, которые используются в кулинарии. Лавр произрастает в южных регионах Европы и Средиземноморья. Его листья имеют насыщенный аромат и используются для придания вкуса различным блюдам, таким как супы, соусы и маринады. Кроме того, лавровое дерево имеет декоративное значение и может вырастать в виде кустарника или небольшого дерева.</p>
+                            <p class="product-card__description">Лавр обыкновенный (Laurus nobilis), также известный как
+                                лавровое дерево или лавровый куст, - это вечнозеленое растение, широко известное своими
+                                ароматными листьями, которые используются в кулинарии. Лавр произрастает в южных
+                                регионах Европы и Средиземноморья. Его листья имеют насыщенный аромат и используются для
+                                придания вкуса различным блюдам, таким как супы, соусы и маринады. Кроме того, лавровое
+                                дерево имеет декоративное значение и может вырастать в виде кустарника или небольшого
+                                дерева.</p>
                             <div class="product-card__info">
                                 <div class="product-card__care">
                                     <div class="product-card__care-group">
@@ -66,8 +78,8 @@
                                     <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
                                     <a class="product-card__link" href="">600 руб.</a>
                                 </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </li>
@@ -80,7 +92,10 @@
                             <span class="product-card__name">Bambusa</span>
                         </div>
                         <div class="product-card__info-wrapper">
-                            <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее растение, известное своими высокими стеблями, которые называются колоссами. Это растение преимущественно встречается в тропических и субтропических регионах и является важным источником строительного и декоративного материала.</p>
+                            <p class="product-card__description">Бамбук (Bambusa) - это красивое и быстрорастущее
+                                растение, известное своими высокими стеблями, которые называются колоссами. Это растение
+                                преимущественно встречается в тропических и субтропических регионах и является важным
+                                источником строительного и декоративного материала.</p>
                             <div class="product-card__info">
                                 <div class="product-card__care">
                                     <div class="product-card__care-group">
@@ -96,8 +111,8 @@
                                     <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
                                     <a class="product-card__link" href="">1300 руб.</a>
                                 </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </li>
@@ -106,11 +121,17 @@
                     <h2 class="product-card__title">Драцена</h2>
                     <div class="product-card__wrapper">
                         <div class="product-card__heading">
-                            <img class="product-card__img" src="img/dracaena.jpg" height="152" width="228" alt="Драцена">
+                            <img class="product-card__img" src="img/dracaena.jpg" height="152" width="228"
+                                alt="Драцена">
                             <span class="product-card__name">Dracaena</span>
                         </div>
                         <div class="product-card__info-wrapper">
-                            <p class="product-card__description">Драцена (Dracaena) — это род декоративных растений семейства спаржевых (Asparagaceae). Они обладают длинными, узкими листьями и прекрасным внешним видом, что делает их популярными как комнатные растения. Драцены могут иметь разнообразные окраски листьев, включая зеленые, красные, желтые и пурпурные оттенки, что добавляет разнообразия и красоты в интерьере. Они также считаются очень неприхотливыми и легкими в уходе, что делает их отличным выбором для начинающих садоводов.</p>
+                            <p class="product-card__description">Драцена (Dracaena) — это род декоративных растений
+                                семейства спаржевых (Asparagaceae). Они обладают длинными, узкими листьями и прекрасным
+                                внешним видом, что делает их популярными как комнатные растения. Драцены могут иметь
+                                разнообразные окраски листьев, включая зеленые, красные, желтые и пурпурные оттенки, что
+                                добавляет разнообразия и красоты в интерьере. Они также считаются очень неприхотливыми и
+                                легкими в уходе, что делает их отличным выбором для начинающих садоводов.</p>
                             <div class="product-card__info">
                                 <div class="product-card__care">
                                     <div class="product-card__care-group">
@@ -126,8 +147,8 @@
                                     <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
                                     <a class="product-card__link" href="">1500 руб.</a>
                                 </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </li>
@@ -140,7 +161,10 @@
                             <span class="product-card__name">Palma</span>
                         </div>
                         <div class="product-card__info-wrapper">
-                            <p class="product-card__description">Пальма небольшая в горшке - это миниатюрное растение из семейства пальмовых (Arecaceae). Она обладает красивой перистой листвой и компактным стволом, что делает ее отличным декоративным элементом для интерьеров. Эта мини-пальма легко ухаживать и подходит для украшения небольших помещений.</p>
+                            <p class="product-card__description">Пальма небольшая в горшке - это миниатюрное растение из
+                                семейства пальмовых (Arecaceae). Она обладает красивой перистой листвой и компактным
+                                стволом, что делает ее отличным декоративным элементом для интерьеров. Эта мини-пальма
+                                легко ухаживать и подходит для украшения небольших помещений.</p>
                             <div class="product-card__info">
                                 <div class="product-card__care">
                                     <div class="product-card__care-group">
@@ -156,8 +180,8 @@
                                     <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
                                     <a class="product-card__link" href="">2300 руб.</a>
                                 </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </li>
@@ -166,11 +190,16 @@
                     <h2 class="product-card__title">Крестовник</h2>
                     <div class="product-card__wrapper">
                         <div class="product-card__heading">
-                            <img class="product-card__img" src="img/spathiph.jpg" height="152" width="228" alt="Крестовник">
+                            <img class="product-card__img" src="img/spathiph.jpg" height="152" width="228"
+                                alt="Крестовник">
                             <span class="product-card__name">Senecio</span>
                         </div>
                         <div class="product-card__info-wrapper">
-                            <p class="product-card__description">Растение семейства астровых Senecio, известное как крестовник, представляет собой удивительно красивое и разнообразное семейство растений. Крестовики могут быть как многолетними, так и однолетними, их родина - Африка, но некоторые виды встречаются и в других регионах мира. Характерной особенностью крестовика являются его декоративные сочные листья и красивые соцветия.</p>
+                            <p class="product-card__description">Растение семейства астровых Senecio, известное как
+                                крестовник, представляет собой удивительно красивое и разнообразное семейство растений.
+                                Крестовики могут быть как многолетними, так и однолетними, их родина - Африка, но
+                                некоторые виды встречаются и в других регионах мира. Характерной особенностью крестовика
+                                являются его декоративные сочные листья и красивые соцветия.</p>
                             <div class="product-card__info">
                                 <div class="product-card__care">
                                     <div class="product-card__care-group">
@@ -186,12 +215,13 @@
                                     <a class="product-card__link product-card__link--secondary" href="">В избранное</a>
                                     <a class="product-card__link" href="">1200 руб.</a>
                                 </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </li>
         </ul>
     </div>
 </body>
+
 </html>
